force-app/main/default/objects/Bypass_Setting__c/Bypass_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To ByPass All or Individual Trigger on execution of code</description>
    <label>Bypass Setting</label>
</CustomObject>