force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_All__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass All</label>
    <type>Checkbox</type>
</CustomField>