force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_All_Validations_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Validations_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass All Validations Rules</label>
    <type>Checkbox</type>
</CustomField>