force-app/main/default/objects/Bypass_Setting__c/fields/ByPass_Auto_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Auto_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Auto Cancellation</label>
    <type>Checkbox</type>
</CustomField>