force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_Backend_Automations__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Backend_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Backend Automations</label>
    <type>Checkbox</type>
</CustomField>