force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_Booking_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Booking_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Booking Welcome Email</label>
    <type>Checkbox</type>
</CustomField>