force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_Demand_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Demand_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Demand Trigger</label>
    <type>Checkbox</type>
</CustomField>