force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>