force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_LP_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_LP_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass LP Calculation</label>
    <type>Checkbox</type>
</CustomField>