force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_OldBrokerAutoDeletion__c.field-meta.xml
<CustomField>
    <fullName>Bypass_OldBrokerAutoDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass OldBrokerAutoDeletion</label>
    <type>Checkbox</type>
</CustomField>