force-app/main/default/objects/Bypass_Setting__c/fields/Bypass_TPM_process__c.field-meta.xml
<CustomField>
    <fullName>Bypass_TPM_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass TPM process</label>
    <type>Checkbox</type>
</CustomField>